--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/greghub/green-audio-player/dist/css/green-audio-player.min.css">
     <script src="https://cdn.jsdelivr.net/gh/greghub/green-audio-player/dist/js/green-audio-player.min.js"></script>
 
-    <title>Bramdon Santiago | Frontend</title>
+    <title>Bramdon Santiago | Frontend developer</title>
   </head>
   <body>
     <div id="root"></div>
